<resources>
    <string name="app_name">ListView</string>
    <string name="sample_text">sample_text</string>
    <string name="add_city">Add City</string>
    <string name="remove_city">Remove City</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="confirm">Confirm</string>
    <string name="listy_city">Listy City</string>
    <string name="listycity">ListyCity</string>
</resources>